feat: finish migrating mojmap