@@ -1,8 +1,12 @@
 package dev.qixils.crowdcontrol.plugin.fabric.commands;
 
-import dev.qixils.crowdcontrol.plugin.fabric.ImmediateCommand;
+import dev.qixils.crowdcontrol.common.util.ThreadUtil;
+import dev.qixils.crowdcontrol.plugin.fabric.ModdedCommand;
 import dev.qixils.crowdcontrol.plugin.fabric.ModdedCrowdControlPlugin;
-import dev.qixils.crowdcontrol.socket.Response;
+import live.crowdcontrol.cc4j.CCPlayer;
+import live.crowdcontrol.cc4j.websocket.data.CCInstantEffectResponse;
+import live.crowdcontrol.cc4j.websocket.data.ResponseStatus;
+import live.crowdcontrol.cc4j.websocket.payload.PublicEffectPayload;
 import lombok.Getter;
 import net.kyori.adventure.text.Component;
 import net.minecraft.core.Holder;
@@ -20,11 +24,12 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.function.Supplier;
 
 import static dev.qixils.crowdcontrol.common.command.CommandConstants.csIdOf;
 
 @Getter
-public class EnchantmentCommand extends ImmediateCommand {
+public class EnchantmentCommand extends ModdedCommand {
 	protected final Holder<Enchantment> enchantmentHolder;
 	protected final Enchantment enchantment;
 	private final String effectName;
@@ -42,57 +47,59 @@ public class EnchantmentCommand extends ImmediateCommand {
 	}
 
 	@Override
-	public Response.@NotNull Builder executeImmediately(@NotNull List<@NotNull ServerPlayer> players, @NotNull Request request) {
-		Response.Builder result = request.buildResponse()
-				.type(Response.ResultType.RETRY)
-				.message("No items could be enchanted");
-		for (ServerPlayer player : players) {
-			int level = enchantment.getMaxLevel();
-			Inventory inv = player.getInventory();
-			// get the equipped item that supports this enchantment and has the lowest level of it
-			Map<EquipmentSlot, Integer> levelMap = new HashMap<>(EquipmentSlot.values().length);
-			for (EquipmentSlot slot : EquipmentSlot.values()) {
-				ItemStack item = getItem(inv, slot);
-				// ensure this item:
-				// A) isn't null
-				// B) is not empty
-				// C) supports the requested enchantment
-				// D) would actually benefit from upgrading this enchantment if applicable
-				//    (i.e. this prevents Silk Touch from being "upgraded" to level 2)
-				// E) is not absolutely maxed out on this enchantment (i.e. level 255)
-				if (!item.isEmpty()
+	public void execute(@NotNull Supplier<@NotNull List<@NotNull ServerPlayer>> playerSupplier, @NotNull PublicEffectPayload request, @NotNull CCPlayer ccPlayer) {
+		ccPlayer.sendResponse(ThreadUtil.waitForSuccess(() -> {
+			boolean success = false;
+			for (ServerPlayer player : playerSupplier.get()) {
+				int level = enchantment.getMaxLevel();
+				Inventory inv = player.getInventory();
+				// get the equipped item that supports this enchantment and has the lowest level of it
+				Map<EquipmentSlot, Integer> levelMap = new HashMap<>(EquipmentSlot.values().length);
+				for (EquipmentSlot slot : EquipmentSlot.values()) {
+					ItemStack item = getItem(inv, slot);
+					// ensure this item:
+					// A) isn't null
+					// B) is not empty
+					// C) supports the requested enchantment
+					// D) would actually benefit from upgrading this enchantment if applicable
+					//    (i.e. this prevents Silk Touch from being "upgraded" to level 2)
+					// E) is not absolutely maxed out on this enchantment (i.e. level 255)
+					if (!item.isEmpty()
 						&& enchantment.canEnchant(item)
 						&& (
 						enchantment.getMaxLevel() != enchantment.getMinLevel()
-								|| getEnchantmentLevel(item, enchantmentHolder) != enchantment.getMaxLevel()
-						&& getEnchantmentLevel(item, enchantmentHolder) != 255
-				)
-				) {
-					levelMap.put(slot, getEnchantmentLevel(item, enchantmentHolder));
+							|| getEnchantmentLevel(item, enchantmentHolder) != enchantment.getMaxLevel()
+							&& getEnchantmentLevel(item, enchantmentHolder) != 255
+					)
+					) {
+						levelMap.put(slot, getEnchantmentLevel(item, enchantmentHolder));
+					}
 				}
-			}
-			EquipmentSlot slot = levelMap.entrySet().stream()
+				EquipmentSlot slot = levelMap.entrySet().stream()
 					.min(Comparator.comparingInt(Entry::getValue))
 					.map(Entry::getKey).orElse(null);
-			if (slot == null)
-				continue;
-			// add new enchant
-			ItemStack item = getItem(inv, slot);
-			int curLevel = getEnchantmentLevel(item, enchantmentHolder);
-			if (curLevel >= level)
-				level = curLevel + 1;
-			final int setLevel = level;
-			EnchantmentHelper.updateEnchantments(item, mutable -> mutable.set(enchantmentHolder, setLevel));
-			result.type(Response.ResultType.SUCCESS);
-		}
-		return result;
+				if (slot == null)
+					continue;
+				// add new enchant
+				ItemStack item = getItem(inv, slot);
+				int curLevel = getEnchantmentLevel(item, enchantmentHolder);
+				if (curLevel >= level)
+					level = curLevel + 1;
+				final int setLevel = level;
+				EnchantmentHelper.updateEnchantments(item, mutable -> mutable.set(enchantmentHolder, setLevel));
+				success = true;
+			}
+			return success
+				? new CCInstantEffectResponse(request.getRequestId(), ResponseStatus.SUCCESS)
+				: new CCInstantEffectResponse(request.getRequestId(), ResponseStatus.FAIL_TEMPORARY, "No items could be enchanted");
+		}));
 	}
 
 	public static ItemStack getItem(Inventory inv, EquipmentSlot slot) {
 		if (slot == EquipmentSlot.MAINHAND)
 			return inv.getItem(inv.selected);
 		if (slot == EquipmentSlot.OFFHAND)
-			return inv.offhand.get(0);
+			return inv.offhand.getFirst();
 		return inv.armor.get(slot.getIndex());
 	}
 
