@@ -1,11 +1,14 @@
 package dev.qixils.crowdcontrol.plugin.fabric.commands;
 
 import dev.qixils.crowdcontrol.common.LimitConfig;
-import dev.qixils.crowdcontrol.plugin.fabric.ImmediateCommand;
+import dev.qixils.crowdcontrol.common.util.ThreadUtil;
+import dev.qixils.crowdcontrol.plugin.fabric.ModdedCommand;
 import dev.qixils.crowdcontrol.plugin.fabric.ModdedCrowdControlPlugin;
-import dev.qixils.crowdcontrol.socket.Response;
-import dev.qixils.crowdcontrol.socket.Response.Builder;
-import dev.qixils.crowdcontrol.socket.Response.ResultType;
+import live.crowdcontrol.cc4j.CCPlayer;
+import live.crowdcontrol.cc4j.websocket.data.CCEffectResponse;
+import live.crowdcontrol.cc4j.websocket.data.CCInstantEffectResponse;
+import live.crowdcontrol.cc4j.websocket.data.ResponseStatus;
+import live.crowdcontrol.cc4j.websocket.payload.PublicEffectPayload;
 import lombok.Getter;
 import net.kyori.adventure.text.Component;
 import net.minecraft.core.registries.BuiltInRegistries;
@@ -16,14 +19,17 @@ import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.phys.Vec3;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Supplier;
 import java.util.stream.StreamSupport;
 
 import static dev.qixils.crowdcontrol.common.command.CommandConstants.REMOVE_ENTITY_RADIUS;
 import static dev.qixils.crowdcontrol.common.command.CommandConstants.csIdOf;
 
 @Getter
-public class RemoveEntityCommand<E extends Entity> extends ImmediateCommand implements EntityCommand<E> {
+public class RemoveEntityCommand<E extends Entity> extends ModdedCommand implements EntityCommand<E> {
 	protected final EntityType<E> entityType;
 	private final String effectName;
 	private final Component displayName;
@@ -49,46 +55,41 @@ public class RemoveEntityCommand<E extends Entity> extends ImmediateCommand impl
 				.sorted((entity1, entity2) -> (int) (entity1.distanceToSqr(playerPosition) - entity2.distanceToSqr(playerPosition))).toList();
 		if (entities.isEmpty())
 			return false;
-		entities.get(0).remove(RemovalReason.KILLED);
+		entities.getFirst().remove(RemovalReason.KILLED);
 		return true;
 	}
 
-	@NotNull
 	@Override
-	public Response.Builder executeImmediately(@NotNull List<@NotNull ServerPlayer> players, @NotNull Request request) {
-		Response.Builder tryExecute = tryExecute(players, request);
-		if (tryExecute != null) return tryExecute;
+	public void execute(@NotNull Supplier<@NotNull List<@NotNull ServerPlayer>> playerSupplier, @NotNull PublicEffectPayload request, @NotNull CCPlayer ccPlayer) {
+		ccPlayer.sendResponse(ThreadUtil.waitForSuccess(() -> {
+			List<ServerPlayer> players = playerSupplier.get();
+			LimitConfig config = getPlugin().getLimitConfig();
+			int playerLimit = config.getEntityLimit(BuiltInRegistries.ENTITY_TYPE.getKey(entityType).getPath());
+			if (playerLimit > 0) {
+				boolean hostsBypass = config.hostsBypass();
+				AtomicInteger victims = new AtomicInteger();
+				players = players.stream()
+					.sorted(Comparator.comparing(plugin::globalEffectsUsableFor))
+					.takeWhile(player -> victims.getAndAdd(1) < playerLimit || (hostsBypass && plugin.globalEffectsUsableFor(player)))
+					.toList();
+			}
 
-		Builder result = request.buildResponse().type(ResultType.RETRY)
-				.message("No " + plugin.getTextUtil().asPlain(entityType.getDescription()) + "s found nearby to remove");
+			CCEffectResponse tryExecute = tryExecute(players, request, ccPlayer);
+			if (tryExecute != null) return tryExecute;
 
-		LimitConfig config = getPlugin().getLimitConfig();
-		int maxVictims = config.getItemLimit(BuiltInRegistries.ENTITY_TYPE.getKey(entityType).getPath());
-		int victims = 0;
+			boolean success = false;
 
-		// first pass (hosts)
-		for (ServerPlayer player : players) {
-			if (!config.hostsBypass() && maxVictims > 0 && victims >= maxVictims)
-				break;
-			if (!isHost(player))
-				continue;
-			if (removeEntityFrom(player))
-				victims++;
-		}
+			for (ServerPlayer player : players) {
+				try {
+					success |= removeEntityFrom(player);
+				} catch (Exception e) {
+					plugin.getSLF4JLogger().error("Failed to spawn entity", e);
+				}
+			}
 
-		// second pass (guests)
-		for (ServerPlayer player : players) {
-			if (maxVictims > 0 && victims >= maxVictims)
-				break;
-			if (isHost(player))
-				continue;
-			if (removeEntityFrom(player))
-				victims++;
-		}
-
-		if (victims > 0)
-			result.type(ResultType.SUCCESS).message("SUCCESS");
-
-		return result;
+			return success
+				? new CCInstantEffectResponse(request.getRequestId(), ResponseStatus.SUCCESS)
+				: new CCInstantEffectResponse(request.getRequestId(), ResponseStatus.FAIL_TEMPORARY, "No " + plugin.getTextUtil().asPlain(entityType.getDescription()) + "s found nearby to remove");
+		}));
 	}
 }
