@@ -1,50 +1,56 @@
 package dev.qixils.crowdcontrol.plugin.fabric.commands;
 
 import dev.qixils.crowdcontrol.TriState;
-import dev.qixils.crowdcontrol.common.util.RandomUtil;
-import dev.qixils.crowdcontrol.plugin.fabric.ImmediateCommand;
+import dev.qixils.crowdcontrol.common.util.ThreadUtil;
+import dev.qixils.crowdcontrol.plugin.fabric.ModdedCommand;
 import dev.qixils.crowdcontrol.plugin.fabric.ModdedCrowdControlPlugin;
 import dev.qixils.crowdcontrol.plugin.fabric.utils.Location;
+import live.crowdcontrol.cc4j.CCPlayer;
+import live.crowdcontrol.cc4j.IUserRecord;
+import live.crowdcontrol.cc4j.websocket.data.CCInstantEffectResponse;
+import live.crowdcontrol.cc4j.websocket.data.ResponseStatus;
 import live.crowdcontrol.cc4j.websocket.payload.PublicEffectPayload;
-import dev.qixils.crowdcontrol.socket.Response;
-import dev.qixils.crowdcontrol.socket.Response.ResultType;
 import lombok.Getter;
 import net.minecraft.server.level.ServerPlayer;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Supplier;
 
 @Getter
-public class SwapCommand extends ImmediateCommand {
+public class SwapCommand extends ModdedCommand {
 	private final String effectName = "swap";
 
 	public SwapCommand(ModdedCrowdControlPlugin plugin) {
 		super(plugin);
 	}
 
-	@NotNull
 	@Override
-	public Response.Builder executeImmediately(@NotNull List<@NotNull ServerPlayer> players, @NotNull Request request) {
-		if (players.size() < 2)
-			return request.buildResponse().type(ResultType.FAILURE).message("Not enough participating players online");
+	public void execute(@NotNull Supplier<@NotNull List<@NotNull ServerPlayer>> playerSupplier, @NotNull PublicEffectPayload request, @NotNull CCPlayer ccPlayer) {
+		ccPlayer.sendResponse(ThreadUtil.waitForSuccess(() -> {
+			List<ServerPlayer> players = playerSupplier.get();
+			if (players.size() < 2)
+				return new CCInstantEffectResponse(request.getRequestId(), ResponseStatus.FAIL_TEMPORARY, "Not enough participating players online");
 
-		// get shuffled list of players
-		Collections.shuffle(players, RandomUtil.RNG);
-		// create a list offset by one
-		List<ServerPlayer> offset = new ArrayList<>(players.size());
-		offset.addAll(players.subList(1, players.size()));
-		offset.add(players.get(0));
-		// get teleport destinations
-		Map<ServerPlayer, Location> destinations = new HashMap<>(players.size());
-		for (int i = 0; i < players.size(); i++)
-			destinations.put(players.get(i), new Location(offset.get(i)));
-		// teleport
-		sync(() -> destinations.forEach((player, location) -> location.teleportHere(player)));
-		return request.buildResponse().type(Response.ResultType.SUCCESS);
+			// create a list offset by one
+			List<ServerPlayer> offset = new ArrayList<>(players.size());
+			offset.addAll(players.subList(1, players.size()));
+			offset.add(players.getFirst());
+			// get teleport destinations
+			Map<ServerPlayer, Location> destinations = new HashMap<>(players.size());
+			for (int i = 0; i < players.size(); i++)
+				destinations.put(players.get(i), new Location(offset.get(i)));
+			// teleport
+			sync(() -> destinations.forEach((player, location) -> location.teleportHere(player)));
+			return new CCInstantEffectResponse(request.getRequestId(), ResponseStatus.SUCCESS);
+		}));
 	}
 
 	@Override
-	public TriState isSelectable() {
-		return plugin.getPlayerManager().getAllPlayers().size() <= 1 ? TriState.FALSE : TriState.TRUE;
+	public TriState isSelectable(@NotNull IUserRecord user, @NotNull List<ServerPlayer> potentialPlayers) {
+		return potentialPlayers.size() <= 1 ? TriState.FALSE : TriState.TRUE;
 	}
 }
